--- a/prc12.html
+++ b/prc12.html
@@ -210,7 +210,7 @@
             <tr>
                 <th>12</th>
                 <th>Create a Table that represent Live Practical Book Records</th>
-                <th><a href="https://yashsrivastava83.github.io/fullstak_newrepsitory/Practical12/practical12.html">Practical-12</a></th>
+                <th><a href="https://saranshpathak.github.io/FullStack-Practical/prc12">Practical-12</a></th>
                 <th style="color: red;">Unchecked</th>
                 <th>
                     <i class="fa fa-pencil"></i>
